--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        textarea {
+            width: 80%;
+            height: 10vh;
+            display: block;
+            margin: 1rem;
+            padding: 1rem;
+        }
+    </style>
 </head>
 <body>
-
+    <textarea id="txt-input"
+    placeholder="put your sentence in English here and we will convert it to banana">
+</textarea>
+    <button id="button-id">transalte</button>
+    <script src="app.js" type="text/javascript"></script>
 </body>
 </html>
