--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
             margin: 1rem;
             padding: 1rem;
         }
+        #output {
+            border: 1px solid black;
+            height: 10vh;
+            width: 80%;
+            margin: 1rem;
+            padding: 1rem;
+        }
     </style>
 </head>
 <body>
@@ -20,6 +27,8 @@
     placeholder="put your sentence in English here and we will convert it to banana">
 </textarea>
     <button id="button-id">transalte</button>
+    <div style="font-size: larger;">Output will come here 👇</div>
+    <div id="output"></div>
     <script src="app.js" type="text/javascript"></script>
 </body>
 </html>
