--- a/index.html
+++ b/index.html
@@ -5,30 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        textarea {
-            width: 80%;
-            height: 10vh;
-            display: block;
-            margin: 1rem;
-            padding: 1rem;
-        }
-        #output {
-            border: 1px solid black;
-            height: 10vh;
-            width: 80%;
-            margin: 1rem;
-            padding: 1rem;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
+    <h1> Navi Translator</h1>
     <textarea id="txt-input"
     placeholder="put your sentence in English here and we will convert it to banana">
 </textarea>
-    <button id="button-id">transalte</button>
-    <div style="font-size: larger;">Output will come here 👇</div>
+    <button id="btn-translate">transalte</button>
+    <div style="color: blanchedalmond; text-align: center;" > Output will come here 👇</div>
     <div id="output"></div>
+    <footer class="footer">
+        <h2 >Lets connect socially💻🌻</h2>
+        <div class="social-links">
+
+            <ul>
+                <li class="list-item-inline"><a style="color:white; text-decoration: none;" href="https://www.instagram.com/harshit_adatra/" target="_blank">Instagram</a></li>
+                <li class="list-item-inline"><a style="color:white; text-decoration: none;" href="https://github.com/harshitadatra"target="_blank">Github</a></li>
+                <li class="list-item-inline"><a style="color:white; text-decoration:none;"href="https://twitter.com/HarshitAdatra"target="_blank">Twitter</a></li>
+
+                <li class="list-item-inline"><a style="color:white; text-decoration: none;"href="https://www.linkedin.com/in/harshit-adatra-777818179/" target="_blank">Linkedin</a></li>
+
+
+
+            </ul>
+           
+    </footer>
     <script src="app.js" type="text/javascript"></script>
 </body>
 </html>
